# vermin_vm

./: .clang-format  CMakeLists.txt  README.md  spec.txt
examples/assembly/: factorial_iterative.asm  factorial_recursive.asm  hello_world.asm  print_1_100.asm
include/: vermin.h
source/: assembler.c  compiler.py  main.c  source.vermin  std.vermin  string.c  vm.c
